# packages/backend/src/entity/Execution.ts
@@ -19,7 +19,7 @@ export class Execution {
   record: WebsiteRecord;
 
   @Column({ type: "text", default: "waiting" })
-  status: paths["/executions/{executionId}"]["get"]["responses"]["200"]["content"]["application/json"]["status"];
+  status: paths["/api/executions/{executionId}"]["get"]["responses"]["200"]["content"]["application/json"]["status"];
 
   @Column({ default: () => "CURRENT_TIMESTAMP" })
   executionTime: Date;
